fixed main page paddings on mobile

--- a/static/scss/footer.scss
+++ b/static/scss/footer.scss
@@ -11,7 +11,7 @@ footer {
   }
 
   @media (max-width: 1000px) {
-    padding: 40px 30px 50px;
+    padding: 40px 20px 50px;
   }
 
   .footer-container {
