--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -41,7 +41,7 @@ body {
   display: grid;
 
   @media (max-width: 1000px) {
-    padding: 50px 30px;
+    padding: 50px 20px;
   }
 
   .articles {
